Minor updates to crmscript yml files.

--- a/docs/api-reference/CRMScript.Global.Byte.yml
+++ b/docs/api-reference/CRMScript.Global.Byte.yml
@@ -24,7 +24,7 @@ items:
   langs:
   - crmscript
   parent: CRMScript.Global.Byte
-  name: '#ctor(Integer)'
+  name: Byte(Integer)
   nameWithType: Byte.#ctor(Integer)
   fullName: CRMScript.Global.Byte.#ctor(Integer)
   type: Constructor
