--- a/docs/api-reference/CRMScript.Global.Date.yml
+++ b/docs/api-reference/CRMScript.Global.Date.yml
@@ -32,7 +32,7 @@ items:
   langs:
   - crmscript
   parent: CRMScript.Global.Date
-  name: '#ctor(Date)'
+  name: Date(Date)
   nameWithType: Date.#ctor(Date)
   fullName: CRMScript.Global.Date.#ctor(Date)
   type: Constructor
@@ -54,7 +54,7 @@ items:
   langs:
   - crmscript
   parent: CRMScript.Global.Date
-  name: '#ctor(String)'
+  name: Date(String)
   nameWithType: Date.#ctor(String)
   fullName: CRMScript.Global.Date.#ctor(String)
   type: Constructor
