--- a/docs/api-reference/CRMScript.Global.DateTime.yml
+++ b/docs/api-reference/CRMScript.Global.DateTime.yml
@@ -82,12 +82,12 @@ items:
   name: DateTime(Integer, Integer, Integer, Integer, Integer, Integer)
   nameWithType: DateTime.DateTime(Integer, Integer, Integer, Integer, Integer, Integer)
   fullName: CRMScript.Global.DateTime
-  type: Method
+  type: Constructor
   summary: "\nSpecify all elements of a DateTime individually. It accepts 6 integer values, representing year, month (1-12), day-of-month (1-31), hour (0-23), minute (0-59), and second (0-59). The constructor automatically calculates the weekday.\n"
   example:
   - "\n<pre><code>DateTime schoolEnds = DateTime(2020,06,22,11,0,0);</code></pre>\n"
   syntax:
-    content: DateTime DateTime(Integer year, Integer month, Integer mday,Integer hour,Integer min,Integer sec)
+    content: DateTime DateTime(Integer year, Integer month, Integer day, Integer hour, Integer min, Integer sec)
     parameters:
     - id: year
       type: CRMScript.Global.Integer
