--- a/docs/api-reference/CRMScript.Global.TimeSpan.yml
+++ b/docs/api-reference/CRMScript.Global.TimeSpan.yml
@@ -37,7 +37,7 @@ items:
   so.intellisense: Void.TimeSpan
   langs:
   - crmscript
-  name: '#ctor'
+  name: TimeSpan
   nameWithType: TimeSpan.#ctor
   fullName: CRMScript.Global.TimeSpan.#ctor
   type: Constructor
