--- a/docs/api-reference/CRMScript.Native.AppointmentSlicer.yml
+++ b/docs/api-reference/CRMScript.Native.AppointmentSlicer.yml
@@ -25,7 +25,7 @@ items:
   so.intellisense: Void.AppointmentSlicer
   langs:
   - crmscript
-  name: '#ctor'
+  name: AppointmentSlicer()
   nameWithType: AppointmentSlicer.#ctor
   fullName: CRMScript.Native.AppointmentSlicer.#ctor
   type: Constructor
