--- a/docs/api-reference/CRMScript.NetServer.NSAssociate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAssociate.yml
@@ -269,7 +269,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: User type. See <xref href=\"CRMScript.NetServer.AssociateType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: "User type. See <xref href=\"CRMScript.NetServer.AssociateType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   example: 
   - "\n<pre><code>NSAssociate thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAssociate.GetUserName()
