#9 Moved Vector from Global to Native

--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -1092,7 +1092,7 @@ items:
     content: Vector getEmails()
     parameters: []
     return:
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: Vector of names and emails
 - uid: CRMScript.Global.String.isValidEmail()
   commentId: M:CRMScript.Global.String.isValidEmail()
@@ -1574,12 +1574,12 @@ references:
   name: Float
   nameWithType: Float
   fullName: CRMScript.Global.Float
-- uid: CRMScript.Global.Vector
-  commentId: T:CRMScript.Global.Vector
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
   isExternal: true
   name: Vector
   nameWithType: Vector
-  fullName: CRMScript.Global.Vector
+  fullName: CRMScript.Native.Vector
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
