--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -616,7 +616,7 @@ items:
     content: String combineHtmlStrings(Vector htmlStrings)
     parameters:
     - id: htmlStrings
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: Multiple strings, each containing an HTML document
     return:
       type: CRMScript.Global.String
@@ -4118,12 +4118,12 @@ references:
   name: HtmlElement
   nameWithType: HtmlElement
   fullName: CRMScript.Native.HtmlElement
-- uid: CRMScript.Global.Vector
-  commentId: T:CRMScript.Global.Vector
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
   isExternal: true
   name: Vector
   nameWithType: Vector
-  fullName: CRMScript.Global.Vector
+  fullName: CRMScript.Native.Vector
 - uid: CRMScript.Global.Byte[]
   isExternal: true
   name: Byte[]
