--- a/docs/api-reference/CRMScript.Native.Message.yml
+++ b/docs/api-reference/CRMScript.Native.Message.yml
@@ -257,7 +257,7 @@ items:
     content: Void saveInvolved(Vector emailAddresses)
     parameters:
     - id: emailAddresses
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: A collection of email addresses for multiple recipients
     return:
       type: CRMScript.Global.Void
@@ -278,13 +278,13 @@ items:
     content: Bool send(Vector to, Vector cc, Vector bcc)
     parameters:
     - id: to
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The to-recipients in the email
     - id: cc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The cc-recipients in the email
     - id: bcc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The bcc-recipients in the email
     return:
       type: CRMScript.Global.Bool
@@ -306,13 +306,13 @@ items:
     content: Bool send(Vector to, Vector cc, Vector bcc, Integer categoryId)
     parameters:
     - id: to
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The to-recipients in the email
     - id: cc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The cc-recipients in the email
     - id: bcc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The bcc-recipients in the email
     - id: categoryId
       type: CRMScript.Global.Integer
@@ -337,13 +337,13 @@ items:
     content: Bool send(Vector to, Vector cc, Vector bcc, String subject)
     parameters:
     - id: to
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The to-recipients in the email
     - id: cc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The cc-recipients in the email
     - id: bcc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The bcc-recipients in the email
     - id: subject
       type: CRMScript.Global.String
@@ -368,13 +368,13 @@ items:
     content: Bool send(Vector to, Vector cc, Vector bcc, String subject, String bodyHeading)
     parameters:
     - id: to
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The to-recipients in the email
     - id: cc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The cc-recipients in the email
     - id: bcc
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The bcc-recipients in the email
     - id: subject
       type: CRMScript.Global.String
@@ -420,7 +420,7 @@ items:
     content: Bool sendSms(Vector to)
     parameters:
     - id: to
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The numbers to send the message to
     return:
       type: CRMScript.Global.Bool
@@ -442,7 +442,7 @@ items:
     content: Void setAttachments(Vector ids)
     parameters:
     - id: ids
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: The IDs of the attachments
     return:
       type: CRMScript.Global.Void
@@ -523,12 +523,12 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.Vector
-  commentId: T:CRMScript.Global.Vector
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
   isExternal: true
   name: Vector
   nameWithType: Vector
-  fullName: CRMScript.Global.Vector
+  fullName: CRMScript.Native.Vector
 - uid: CRMScript.Global.Bool
   commentId: T:CRMScript.Global.Bool
   isExternal: true
