--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -68,7 +68,7 @@ items:
     content: addSecondaryCustomers(Vector ids)
     parameters:
     - id: ids
-      type: CRMScript.Global.Vector
+      type: CRMScript.Native.Vector
       description: an array of Strings containing the customerIds to add as secondary customers on the ticket
     return: 
       type: CRMScript.Global.Void
@@ -548,12 +548,12 @@ references:
   name: Ticket
   nameWithType: Ticket
   fullName: CRMScript.Native.Ticket
-- uid: CRMScript.Global.Vector
-  commentId: T:CRMScript.Global.Vector
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
   isExternal: true
   name: Vector
   nameWithType: Vector
-  fullName: CRMScript.Global.Vector
+  fullName: CRMScript.Native.Vector
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
