--- a/docs/api-reference/CRMScript.Native.yml
+++ b/docs/api-reference/CRMScript.Native.yml
@@ -55,6 +55,7 @@ items:
   - CRMScript.Native.TimeSpan
   - CRMScript.Native.TimeZone
   - CRMScript.Native.User
+  - CRMScript.Native.Vector
   - CRMScript.Native.WeekSchedule
   - CRMScript.Native.YearSchedule
   name: CRMScript.Native
@@ -362,6 +363,12 @@ references:
   name: User
   nameWithType: User
   fullName: CRMScript.Native.User
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
+  isExternal: true
+  name: Vector
+  nameWithType: Vector
+  fullName: CRMScript.Native.Vector
 - uid: CRMScript.Native.WeekSchedule
   commentId: T:CRMScript.Native.WeekSchedule
   isExternal: true
