--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -26,8 +26,6 @@ items:
     href: CRMScript.Global.String.yml
   - name: Time
     href: CRMScript.Global.Time.yml
-  - name: Vector
-    href: CRMScript.Global.Vector.yml
   - name: XMLNode
     href: CRMScript.Global.XMLNode.yml
 - name: Classes
@@ -131,6 +129,8 @@ items:
     href: CRMScript.Native.TimeZone.yml
   - name: User
     href: CRMScript.Native.User.yml
+  - name: Vector
+    href: CRMScript.Native.Vector.yml
   - name: WeekSchedule
     href: CRMScript.Native.WeekSchedule.yml
   - name: YearSchedule
