--- a/docs/api-reference/CRMScript.Native.Vector.yml
+++ b/docs/api-reference/CRMScript.Native.Vector.yml
@@ -1,35 +1,35 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.Global.Vector
-  commentId: T:CRMScript.Global.Vector
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
   id: Vector
   langs:
   - crmscript
   children:
-    - CRMScript.Global.Vector.#ctor(Integer[])
-    - CRMScript.Global.Vector.parseString(String, String)
-    - CRMScript.Global.Vector.pushBack(String)
-    - CRMScript.Global.Vector.set(Integer, String)
-    - CRMScript.Global.Vector.get(Integer)
-    - CRMScript.Global.Vector.size()
-    - CRMScript.Global.Vector.toIntegerArray()
-    - CRMScript.Global.Vector.toStringArray()
-    - CRMScript.Global.Vector.buildString(String)
-    - CRMScript.Global.Vector.removeAt(Integer)
+    - CRMScript.Native.Vector.#ctor(Integer[])
+    - CRMScript.Native.Vector.parseString(String, String)
+    - CRMScript.Native.Vector.pushBack(String)
+    - CRMScript.Native.Vector.set(Integer, String)
+    - CRMScript.Native.Vector.get(Integer)
+    - CRMScript.Native.Vector.size()
+    - CRMScript.Native.Vector.toIntegerArray()
+    - CRMScript.Native.Vector.toStringArray()
+    - CRMScript.Native.Vector.buildString(String)
+    - CRMScript.Native.Vector.removeAt(Integer)
   name: Vector
   nameWithType: Vector
-  fullName: CRMScript.Global.Vector
+  fullName: CRMScript.Native.Vector
   type: Class
   summary: "\nThis class represents a Vector, in which you can add objects of the type String..\n"
-- uid: CRMScript.Global.Vector.#ctor(Integer[])
-  commentId: M:CRMScript.Global.Vector.#ctor(Integer[])
+- uid: CRMScript.Native.Vector.#ctor(Integer[])
+  commentId: M:CRMScript.Native.Vector.#ctor(Integer[])
   id: '#ctor(Integer[])'
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: Vector(Integer[])
   nameWithType: Vector.Vector(Integer[])
-  fullName: CRMScript.Global.Vector.Vector(Integer[])
+  fullName: CRMScript.Native.Vector.Vector(Integer[])
   type: Constructor
   summary: "\nPass a number array to convert into a new object.\n"
   syntax:
@@ -39,17 +39,17 @@ items:
       type: CRMScript.Global.Integer[]
       description: An Integer array.
     return:
-      type: CRMScript.Global.Vector
-- uid: CRMScript.Global.Vector.parseString(String, String)
-  commentId: M:CRMScript.Global.Vector.parseString(String, String)
+      type: CRMScript.Native.Vector
+- uid: CRMScript.Native.Vector.parseString(String, String)
+  commentId: M:CRMScript.Native.Vector.parseString(String, String)
   id: parseString(String, String)
   so.intellisense: Vector.parseString
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: parseString(String, String)
   nameWithType: Vector.parseString(String, String)
-  fullName: CRMScript.Global.Vector.parseString(String, String)
+  fullName: CRMScript.Native.Vector.parseString(String, String)
   type: Method
   summary: "\nParses a text into a vector. The fields in the string are separated by the given delimiter.\n"
   remarks: "\nThis method does not support escaped characters.\n"
@@ -63,16 +63,16 @@ items:
       type: CRMScript.Global.String
       description: The delimiter for the fields.
     return:
-- uid: CRMScript.Global.Vector.removeAt(Integer)
-  commentId: M:CRMScript.Global.Vector.removeAt(Integer)
+- uid: CRMScript.Native.Vector.removeAt(Integer)
+  commentId: M:CRMScript.Native.Vector.removeAt(Integer)
   id: removeAt(Integer)
   so.intellisense: Vector.removeAt
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: removeAt(Integer)
   nameWithType: Vector.removeAt(Integer)
-  fullName: CRMScript.Global.Vector.removeAt(Integer)
+  fullName: CRMScript.Native.Vector.removeAt(Integer)
   type: Method
   summary: "\nRemoves an element at the specified index.\n"
   syntax:
@@ -82,16 +82,16 @@ items:
       type: CRMScript.Global.Integer
       description: The index (starting at 0) of the element to remove from the vector.
     return:
-- uid: CRMScript.Global.Vector.get(Integer)
-  commentId: M:CRMScript.Global.Vector.get(Integer)
+- uid: CRMScript.Native.Vector.get(Integer)
+  commentId: M:CRMScript.Native.Vector.get(Integer)
   id: get(Integer)
   so.intellisense: Vector.get
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: get(Integer)
   nameWithType: Vector.get(Integer)
-  fullName: CRMScript.Global.Vector.get(Integer)
+  fullName: CRMScript.Native.Vector.get(Integer)
   type: Method
   summary: "\nReturns an element in the vector at the given position.\n"
   remarks: "\nIf the index specified is out of bounds, a RunTimeException will be raised.\n"
@@ -103,16 +103,16 @@ items:
       description: The index (starting at 0) of the element to be retrieved
     return:
       type: CRMScript.Global.String
-- uid: CRMScript.Global.Vector.set(Integer, String)
-  commentId: M:CRMScript.Global.Vector.set(Integer, String)
+- uid: CRMScript.Native.Vector.set(Integer, String)
+  commentId: M:CRMScript.Native.Vector.set(Integer, String)
   id: set(Integer, String)
   so.intellisense: Vector.set
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: set(Integer, String)
   nameWithType: Vector.set(Integer, String)
-  fullName: CRMScript.Global.Vector.set(Integer, String)
+  fullName: CRMScript.Native.Vector.set(Integer, String)
   type: Method
   summary: "\nSets the value at the specified index.\n"
   remarks: "\nIf the index specified is out of bounds, a RunTimeException will be raised.\n"
@@ -126,16 +126,16 @@ items:
       type: CRMScript.Global.String
       description: The value to set at the specified index.
     return:
-- uid: CRMScript.Global.Vector.size()
-  commentId: M:CRMScript.Global.Vector.size()
+- uid: CRMScript.Native.Vector.size()
+  commentId: M:CRMScript.Native.Vector.size()
   id: size()
   so.intellisense: Vector.size
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: size()
   nameWithType: Vector.size()
-  fullName: CRMScript.Global.Vector.size()
+  fullName: CRMScript.Native.Vector.size()
   type: Method
   summary: "\nReturns the size of the vector.\n"
   syntax:
@@ -143,16 +143,16 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-- uid: CRMScript.Global.Vector.toIntegerArray()
-  commentId: M:CRMScript.Global.Vector.toIntegerArray()
+- uid: CRMScript.Native.Vector.toIntegerArray()
+  commentId: M:CRMScript.Native.Vector.toIntegerArray()
   id: toIntegerArray()
   so.intellisense: Vector.toIntegerArray
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: toIntegerArray()
   nameWithType: Vector.toIntegerArray()
-  fullName: CRMScript.Global.Vector.toIntegerArray()
+  fullName: CRMScript.Native.Vector.toIntegerArray()
   type: Method
   summary: "\nConvert a vector to an integer array.\n"
   remarks: "\nInvalid values will be represented as null.\n"
@@ -161,16 +161,16 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer[]
-- uid: CRMScript.Global.Vector.toStringArray()
-  commentId: M:CRMScript.Global.Vector.toStringArray()
+- uid: CRMScript.Native.Vector.toStringArray()
+  commentId: M:CRMScript.Native.Vector.toStringArray()
   id: toStringArray()
   so.intellisense: Vector.toStringArray
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: toStringArray()
   nameWithType: Vector.toStringArray()
-  fullName: CRMScript.Global.Vector.toStringArray()
+  fullName: CRMScript.Native.Vector.toStringArray()
   type: Method
   summary: "\nConvert a vector to a string array.\n"
   syntax:
@@ -178,16 +178,16 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String[]
-- uid: CRMScript.Global.Vector.buildString(String)
-  commentId: M:CRMScript.Global.Vector.buildString(String)
+- uid: CRMScript.Native.Vector.buildString(String)
+  commentId: M:CRMScript.Native.Vector.buildString(String)
   id: buildString(String)
   so.intellisense: Vector.buildString
   langs:
   - crmscript
-  parent: CRMScript.Global.Vector
+  parent: CRMScript.Native.Vector
   name: buildString(String)
   nameWithType: Vector.buildString(String)
-  fullName: CRMScript.Global.Vector.buildString(String)
+  fullName: CRMScript.Native.Vector.buildString(String)
   type: Method
   summary: "\nReturns a string of all the elements in the vector, separated by the specified delimiter.\n"
   remarks: "not escape any characters which might be equal to the delimiter."
@@ -200,8 +200,8 @@ items:
     return:
       type: CRMScript.Global.String
       description: A string with all the elements separated by the delimiter.
-- uid: CRMScript.Global.Vector.pushBack(String)
-  commentId: M:CRMScript.Global.Vector.pushBack(String)
+- uid: CRMScript.Native.Vector.pushBack(String)
+  commentId: M:CRMScript.Native.Vector.pushBack(String)
   id: Vector.pushBack(String)
   so.intellisense: Vector.pushBack
   langs:
@@ -209,7 +209,7 @@ items:
   parent: CRMScript.Vector.pushBack(String)
   name: pushBack(String)
   nameWithType: Vector.pushBack(String)
-  fullName: CRMScript.Global.Vector.pushBack(String)
+  fullName: CRMScript.Native.Vector.pushBack(String)
   type: Method
   summary: "\nPushes a string object to the end of the vector.\n"
   syntax:
@@ -220,12 +220,12 @@ items:
       description: The string object to push on the vector.
     return:
 references:
-- uid: CRMScript.Global.Vector
-  commentId: T:CRMScript.Global.Vector
+- uid: CRMScript.Native.Vector
+  commentId: T:CRMScript.Native.Vector
   isExternal: true
   name: Vector
   nameWithType: Vector
-  fullName: CRMScript.Global.Vector
+  fullName: CRMScript.Native.Vector
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   parent: System
