#9 Moved XMLNode from Global to Native

--- a/docs/api-reference/CRMScript.Native.XMLNode.yml
+++ b/docs/api-reference/CRMScript.Native.XMLNode.yml
@@ -1,52 +1,52 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.Global.XMLNode
-  commentId: T:CRMScript.Global.XMLNode
+- uid: CRMScript.Native.XMLNode
+  commentId: T:CRMScript.Native.XMLNode
   id: XMLNode
   langs:
   - crmscript
   children:
-    - CRMScript.Global.XMLNode.#ctor(XMLNode)
-    - CRMScript.Global.XMLNode.#ctor(String)
-    - CRMScript.Global.XMLNode.toString(Integer)
-    - CRMScript.Global.XMLNode.toJSON(Integer)
-    - CRMScript.Global.XMLNode.addChild(XMLNode)
-    - CRMScript.Global.XMLNode.getChildren()
-    - CRMScript.Global.XMLNode.setChildren(XMLNode[])
-    - CRMScript.Global.XMLNode.getName()
-    - CRMScript.Global.XMLNode.setName(String)
-    - CRMScript.Global.XMLNode.getParameter(String)
-    - CRMScript.Global.XMLNode.setParameter(String, String)
-    - CRMScript.Global.XMLNode.getText()
-    - CRMScript.Global.XMLNode.setText(String)
-    - CRMScript.Global.XMLNode.getValueFromPath(String)
+    - CRMScript.Native.XMLNode.#ctor(XMLNode)
+    - CRMScript.Native.XMLNode.#ctor(String)
+    - CRMScript.Native.XMLNode.toString(Integer)
+    - CRMScript.Native.XMLNode.toJSON(Integer)
+    - CRMScript.Native.XMLNode.addChild(XMLNode)
+    - CRMScript.Native.XMLNode.getChildren()
+    - CRMScript.Native.XMLNode.setChildren(XMLNode[])
+    - CRMScript.Native.XMLNode.getName()
+    - CRMScript.Native.XMLNode.setName(String)
+    - CRMScript.Native.XMLNode.getParameter(String)
+    - CRMScript.Native.XMLNode.setParameter(String, String)
+    - CRMScript.Native.XMLNode.getText()
+    - CRMScript.Native.XMLNode.setText(String)
+    - CRMScript.Native.XMLNode.getValueFromPath(String)
   name: XMLNode
   nameWithType: XMLNode
-  fullName: CRMScript.Global.XMLNode
+  fullName: CRMScript.Native.XMLNode
   type: Class
   summary: "\nThis class represents an XML DOM structure.\n"
-- uid: CRMScript.Global.XMLNode.#ctor(XMLNode)
-  commentId: M:CRMScript.Global.XMLNode.#ctor(XMLNode)
+- uid: CRMScript.Native.XMLNode.#ctor(XMLNode)
+  commentId: M:CRMScript.Native.XMLNode.#ctor(XMLNode)
   id: '#ctor(XMLNode)'
   so.intellisense: Void.XMLNode
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: XMLNode(XMLNode)
   nameWithType: XMLNode.XMLNode(XMLNode)
-  fullName: CRMScript.Global.XMLNode.XMLNode(XMLNode)
+  fullName: CRMScript.Native.XMLNode.XMLNode(XMLNode)
   type: Constructor
   summary: "\nPass an object to copy.\n"
   syntax:
     content: XMLNode XMLNode(XMLNode value)
     parameters:
     - id: value
-      type: CRMScript.Global.XMLNode
+      type: CRMScript.Native.XMLNode
       description: XMLNode object.
     return:
-      type: CRMScript.Global.XMLNode
-- uid: CRMScript.Global.XMLNode.#ctor(String)
-  commentId: M:CRMScript.Global.XMLNode.#ctor(String)
+      type: CRMScript.Native.XMLNode
+- uid: CRMScript.Native.XMLNode.#ctor(String)
+  commentId: M:CRMScript.Native.XMLNode.#ctor(String)
   id: '#ctor(String)'
   so.intellisense: Void.XMLNode
   langs:
@@ -54,7 +54,7 @@ items:
   parent: CRMScript.Global.String
   name: XMLNode(String)
   nameWithType: XMLNode.XMLNode(String)
-  fullName: CRMScript.Global.XMLNode.XMLNode(String)
+  fullName: CRMScript.Native.XMLNode.XMLNode(String)
   type: Constructor
   summary: "\nPass a string to parse and create a new object.\n"
   syntax:
@@ -64,17 +64,17 @@ items:
       type: CRMScript.Global.String
       description: A string to parse.
     return:
-      type: CRMScript.Global.XMLNode
-- uid: CRMScript.Global.XMLNode.toString(Integer)
-  commentId: M:CRMScript.Global.XMLNode.toString(Integer)
+      type: CRMScript.Native.XMLNode
+- uid: CRMScript.Native.XMLNode.toString(Integer)
+  commentId: M:CRMScript.Native.XMLNode.toString(Integer)
   id: toString(Integer)
   so.intellisense: XMLNode.toString
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: toString(Integer)
   nameWithType: XMLNode.toString(Integer)
-  fullName: CRMScript.Global.XMLNode.toString(Integer)
+  fullName: CRMScript.Native.XMLNode.toString(Integer)
   type: Method
   summary: "\nCreates a string containing the XMLNode as a formatted string. Child nodes are also included.\n"
   syntax:
@@ -85,16 +85,16 @@ items:
       description: The text with a given number of spaces.
     return:
       type: CRMScript.Global.String
-- uid: CRMScript.Global.XMLNode.toJSON(Integer)
-  commentId: M:CRMScript.Global.XMLNode.toJSON(Integer)
+- uid: CRMScript.Native.XMLNode.toJSON(Integer)
+  commentId: M:CRMScript.Native.XMLNode.toJSON(Integer)
   id: toJSON(Integer)
   so.intellisense: XMLNode.toJSON
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: toJSON(Integer)
   nameWithType: XMLNode.toJSON(Integer)
-  fullName: CRMScript.Global.XMLNode.toJSON(Integer)
+  fullName: CRMScript.Native.XMLNode.toJSON(Integer)
   type: Method
   summary: "\nCreates a string containing XML nodes formatted as a JSON document. Child nodes are also included.\n"
   remarks: "\nValid types: object, array, string, number, bool, and null.\n"
@@ -109,16 +109,16 @@ items:
     return:
       type: CRMScript.Global.String
       description: XMLNodes converted to JSON.
-- uid: CRMScript.Global.XMLNode.addChild(XMLNode)
-  commentId: M:CRMScript.Global.XMLNode.addChild(XMLNode)
+- uid: CRMScript.Native.XMLNode.addChild(XMLNode)
+  commentId: M:CRMScript.Native.XMLNode.addChild(XMLNode)
   id: addChild(XMLNode)
   so.intellisense: XMLNode.addChild
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: addChild(XMLNode)
   nameWithType: XMLNode.addChild(XMLNode)
-  fullName: CRMScript.Global.XMLNode.addChild(XMLNode)
+  fullName: CRMScript.Native.XMLNode.addChild(XMLNode)
   type: Method
   summary: "\nAdd one node as a child node of the current node.\n"
   example:
@@ -127,38 +127,38 @@ items:
     content: Void addChild(XMLNode node)
     parameters:
     - id: node
-      type: CRMScript.Global.XMLNode
+      type: CRMScript.Native.XMLNode
       description: The node to be added.
     return:
       type: CRMScript.Global.Void
-- uid: CRMScript.Global.XMLNode.getChildren()
-  commentId: M:CRMScript.Global.XMLNode.getChildren()
+- uid: CRMScript.Native.XMLNode.getChildren()
+  commentId: M:CRMScript.Native.XMLNode.getChildren()
   id: getChildren()
   so.intellisense: XMLNode.getChildren
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: getChildren()
   nameWithType: XMLNode.getChildren()
-  fullName: CRMScript.Global.XMLNode.getChildren()
+  fullName: CRMScript.Native.XMLNode.getChildren()
   type: Method
   summary: "\nReturns an array of the current node's children.\n"
   syntax:
     content: XMLNode[] getChildren()
     parameters: []
     return:
-      type: CRMScript.Global.XMLNode[]
+      type: CRMScript.Native.XMLNode[]
       description: Returns an array of the current node's children.
-- uid: CRMScript.Global.XMLNode.setChildren(XMLNode[])
-  commentId: M:CRMScript.Global.XMLNode.setChildren(XMLNode[])
+- uid: CRMScript.Native.XMLNode.setChildren(XMLNode[])
+  commentId: M:CRMScript.Native.XMLNode.setChildren(XMLNode[])
   id: setChildren(XMLNode[])
   so.intellisense: XMLNode.setChildren
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: setChildren(XMLNode[])
   nameWithType: XMLNode.setChildren(XMLNode[])
-  fullName: CRMScript.Global.XMLNode.setChildren(XMLNode[])
+  fullName: CRMScript.Native.XMLNode.setChildren(XMLNode[])
   type: Method
   summary: "\nSets an array of XMLNodes as the children of the current node.\n"
   example:
@@ -167,20 +167,20 @@ items:
     content: Void setChildren(XMLNode[] children)
     parameters:
     - id: children
-      type: CRMScript.Global.XMLNode[]
+      type: CRMScript.Native.XMLNode[]
       description: Array of child nodes.
     return:
       type: CRMScript.Global.Void
-- uid: CRMScript.Global.XMLNode.getName()
-  commentId: M:CRMScript.Global.XMLNode.getName()
+- uid: CRMScript.Native.XMLNode.getName()
+  commentId: M:CRMScript.Native.XMLNode.getName()
   id: getName()
   so.intellisense: XMLNode.getName
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: getName()
   nameWithType: XMLNode.getName()
-  fullName: CRMScript.Global.XMLNode.getName()
+  fullName: CRMScript.Native.XMLNode.getName()
   type: Method
   summary: "\nGets the name of the XML tag.\n"
   example:
@@ -191,16 +191,16 @@ items:
     return:
       type: CRMScript.Global.String
       description: The name of the XML tag.
-- uid: CRMScript.Global.XMLNode.setName(String)
-  commentId: M:CRMScript.Global.XMLNode.setName(String)
+- uid: CRMScript.Native.XMLNode.setName(String)
+  commentId: M:CRMScript.Native.XMLNode.setName(String)
   id: setName(String)
   so.intellisense: XMLNode.setName
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: setName(String)
   nameWithType: XMLNode.setName(String)
-  fullName: CRMScript.Global.XMLNode.setName(String)
+  fullName: CRMScript.Native.XMLNode.setName(String)
   type: Method
   summary: "\nSets the tag name of the node.\n"
   example:
@@ -213,16 +213,16 @@ items:
       description: The tag name of the node.
     return:
       type: CRMScript.Global.Void
-- uid: CRMScript.Global.XMLNode.getParameter(String)
-  commentId: M:CRMScript.Global.XMLNode.getParameter(String)
+- uid: CRMScript.Native.XMLNode.getParameter(String)
+  commentId: M:CRMScript.Native.XMLNode.getParameter(String)
   id: getParameter(String)
   so.intellisense: XMLNode.getParameter
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: getParameter(String)
   nameWithType: XMLNode.getParameter(String)
-  fullName: CRMScript.Global.XMLNode.getParameter(String)
+  fullName: CRMScript.Native.XMLNode.getParameter(String)
   type: Method
   summary: "\nGets a parameter (attribute) from the node with a given name.\n"
   example:
@@ -235,16 +235,16 @@ items:
       description: The key to get the value for.
     return:
       type: CRMScript.Global.String
-- uid: CRMScript.Global.XMLNode.setParameter(String, String)
-  commentId: M:CRMScript.Global.XMLNode.setParameter(String, String)
+- uid: CRMScript.Native.XMLNode.setParameter(String, String)
+  commentId: M:CRMScript.Native.XMLNode.setParameter(String, String)
   id: setParameter(String, String)
   so.intellisense: XMLNode.setParameter
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: setParameter(String, String)
   nameWithType: XMLNode.setParameter(String, String)
-  fullName: CRMScript.Global.XMLNode.setParameter(String, String)
+  fullName: CRMScript.Native.XMLNode.setParameter(String, String)
   type: Method
   summary: "\nSets a parameter with name and value. A node can have any number of parameters but all names must be unique.\n"
   example:
@@ -260,16 +260,16 @@ items:
       description: The parameter value.
     return:
       type: CRMScript.Global.Void
-- uid: CRMScript.Global.XMLNode.getText()
-  commentId: M:CRMScript.Global.XMLNode.getText()
+- uid: CRMScript.Native.XMLNode.getText()
+  commentId: M:CRMScript.Native.XMLNode.getText()
   id: getText()
   so.intellisense: XMLNode.getText
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: getText()
   nameWithType: XMLNode.getText()
-  fullName: CRMScript.Global.XMLNode.getText()
+  fullName: CRMScript.Native.XMLNode.getText()
   type: Method
   summary: "\nGets the text between two tags. For example, &gt;TAG>Returns this text&gt;/TAG>\n"
   example:
@@ -279,16 +279,16 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-- uid: CRMScript.Global.XMLNode.setText(String)
-  commentId: M:CRMScript.Global.XMLNode.setText(String)
+- uid: CRMScript.Native.XMLNode.setText(String)
+  commentId: M:CRMScript.Native.XMLNode.setText(String)
   id: setText(String)
   so.intellisense: XMLNode.setText
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: setText(String)
   nameWithType: XMLNode.setText(String)
-  fullName: CRMScript.Global.XMLNode.setText(String)
+  fullName: CRMScript.Native.XMLNode.setText(String)
   type: Method
   summary: "\nSets the text between 2 tags.\n"
   example:
@@ -301,16 +301,16 @@ items:
       description: The text between 2 tags
     return:
       type: CRMScript.Global.Void
-- uid: CRMScript.Global.XMLNode.getValueFromPath(String)
-  commentId: M:CRMScript.Global.XMLNode.getValueFromPath(String)
+- uid: CRMScript.Native.XMLNode.getValueFromPath(String)
+  commentId: M:CRMScript.Native.XMLNode.getValueFromPath(String)
   id: getValueFromPath(String)
   so.intellisense: XMLNode.getValueFromPath
   langs:
   - crmscript
-  parent: CRMScript.Global.XMLNode
+  parent: CRMScript.Native.XMLNode
   name: getValueFromPath(String)
   nameWithType: XMLNode.getValueFromPath(String)
-  fullName: CRMScript.Global.XMLNode.getValueFromPath(String)
+  fullName: CRMScript.Native.XMLNode.getValueFromPath(String)
   type: Method
   summary: "\nThis function will return the value for the given path. The path should be a dot-separated string containing either names of nodes or indices.\n"
   remarks: "\nIf your path does not lead to a node, you will get a String with a null value back (can be checked with isNull()).\n"
@@ -326,22 +326,22 @@ items:
       type: CRMScript.Global.String
       description: The value for the given path.
 references:
-- uid: CRMScript.Global.XMLNode
-  commentId: T:CRMScript.Global.XMLNode
+- uid: CRMScript.Native.XMLNode
+  commentId: T:CRMScript.Native.XMLNode
   isExternal: true
   name: XMLNode
   nameWithType: XMLNode
-  fullName: CRMScript.Global.XMLNode
-- uid: CRMScript.Global.XMLNode[]
+  fullName: CRMScript.Native.XMLNode
+- uid: CRMScript.Native.XMLNode[]
   isExternal: true
   name: XMLNode[]
   nameWithType: XMLNode[]
-  fullName: CRMScript.Global.XMLNode[]
+  fullName: CRMScript.Native.XMLNode[]
   spec.crmscript:
-  - uid: CRMScript.Global.XMLNode
+  - uid: CRMScript.Native.XMLNode
     name: XMLNode
     nameWithType: XMLNode
-    fullName: CRMScript.Global.XMLNode
+    fullName: CRMScript.Native.XMLNode
     isExternal: true
   - name: '[]'
     nameWithType: '[]'
