--- a/docs/api-reference/CRMScript.Native.yml
+++ b/docs/api-reference/CRMScript.Native.yml
@@ -57,6 +57,7 @@ items:
   - CRMScript.Native.User
   - CRMScript.Native.Vector
   - CRMScript.Native.WeekSchedule
+  - CRMScript.Native.XMLNode
   - CRMScript.Native.YearSchedule
   name: CRMScript.Native
   nameWithType: CRMScript.Native
@@ -375,6 +376,12 @@ references:
   name: WeekSchedule
   nameWithType: WeekSchedule
   fullName: CRMScript.Native.WeekSchedule
+- uid: CRMScript.Native.XMLNode
+  commentId: T:CRMScript.Native.XMLNode
+  isExternal: true
+  name: XMLNode
+  nameWithType: XMLNode
+  fullName: CRMScript.Native.XMLNode
 - uid: CRMScript.Native.YearSchedule
   commentId: T:CRMScript.Native.YearSchedule
   isExternal: true
