--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -26,8 +26,6 @@ items:
     href: CRMScript.Global.String.yml
   - name: Time
     href: CRMScript.Global.Time.yml
-  - name: XMLNode
-    href: CRMScript.Global.XMLNode.yml
 - name: Classes
   href: CRMScript.Native.yml
   items:
@@ -133,6 +131,8 @@ items:
     href: CRMScript.Native.Vector.yml
   - name: WeekSchedule
     href: CRMScript.Native.WeekSchedule.yml
+  - name: XMLNode
+    href: CRMScript.Native.XMLNode.yml
   - name: YearSchedule
     href: CRMScript.Native.YearSchedule.yml
 - name: NetServer classes
