#9 Moved Generic from Global to Native

--- a/docs/api-reference/CRMScript.Native.yml
+++ b/docs/api-reference/CRMScript.Native.yml
@@ -23,6 +23,7 @@ items:
   - CRMScript.Native.ExtraTableInfo
   - CRMScript.Native.FHBitSet
   - CRMScript.Native.File
+  - CRMScript.Native.Generic
   - CRMScript.Native.GenericSearch
   - CRMScript.Native.HtmlElement
   - CRMScript.Native.HTTP
@@ -172,6 +173,12 @@ references:
   name: File
   nameWithType: File
   fullName: CRMScript.Native.File
+- uid: CRMScript.Native.Generic
+  commentId: T:CRMScript.Native.Generic
+  isExternal: true
+  name: Generic
+  nameWithType: Generic
+  fullName: CRMScript.Native.Generic
 - uid: CRMScript.Native.GenericSearch
   commentId: T:CRMScript.Native.GenericSearch
   isExternal: true
