--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -18,8 +18,6 @@ items:
     href: CRMScript.Global.DateTime.yml
   - name: Float
     href: CRMScript.Global.Float.yml
-  - name: Generic
-    href: CRMScript.Global.Generic.yml
   - name: Integer
     href: CRMScript.Global.Integer.yml
   - name: String
@@ -63,6 +61,8 @@ items:
     href: CRMScript.Native.FHBitSet.yml
   - name: File
     href: CRMScript.Native.File.yml
+  - name: Generic
+    href: CRMScript.Native.Generic.yml
   - name: GenericSearch
     href: CRMScript.Native.GenericSearch.yml
   - name: HtmlElement
